{
    "name": "InputSystem_Actions",
    "maps": [
        {
            "name": "FirstPerson_Player",
            "id": "55d48aba-8fc1-4bc2-975c-c6b0d4c7c1d9",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "9732b7b5-c3d9-4fa5-8467-16f3cdeff5e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "95324e98-8a81-4bd5-92fc-fbc028375e65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "1466ae94-d93e-4844-9cdd-88f39cdb0284",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "2e2b50ab-cd03-48ff-bf1c-b6ef06a4e8b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Front/Back",
                    "type": "Value",
                    "id": "501a9f14-b7fe-47f6-a9e3-ad52b09c58e4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Left/Right",
                    "type": "Value",
                    "id": "b98c32c9-978a-4b9b-a053-5a7def07bf83",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "51f30810-f832-46ed-9b12-42f310a880c1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "9623655a-0722-420a-9dd1-23985d1684bd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "cf49c3ea-ba71-46f5-a848-784788c4c9a1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "86c3f826-4caf-4af9-80b7-926abde26ad1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c317180e-6c83-4a29-90ba-e87fe8afc046",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": ";AzertyKeyboard",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a18e7788-2620-4242-a325-90393b1f095f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";QwertyKeyboard",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ac5497a-4cc2-41bb-930b-b2bdc6b18955",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";AzertyKeyboard;QwertyKeyboard",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18d5ea0f-754c-4a7a-b272-d90c677aea48",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";AzertyKeyboard",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d9b7e81-ec03-44b0-acc6-ccc72438ce50",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";AzertyKeyboard",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5aebca2-6a09-496b-bf7b-5194382495e5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";QwertyKeyboard",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b484735-2e99-4912-bcbe-4f2f317b4c00",
                    "path": "<Joystick>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Front/Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df918444-f6ef-47e0-874f-249e1cf2d8bb",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left/Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b81454e-3863-4fa7-9139-4d8b288ef0b9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd29ea90-b3fe-4caf-8eee-772046d5f780",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8975d99b-c9db-4a06-a242-3e009887c1b8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fb21a9b-a6d5-4d10-95d7-2fdd3fb707f1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";QwertyKeyboard;AzertyKeyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0fdd20e-7b22-4951-9a12-36f10804cb88",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19da1c33-d640-4267-91c1-a0ae7936f9a9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ThirdPerson_Player",
            "id": "bdb0dc3c-d987-4e8d-b6e8-520f30d6dc76",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "3d1cae9f-1470-4a8d-a26e-bbce325f39a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "88425c7f-02be-4a5c-ae4e-d2e393cea00e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Orbit_Player",
            "id": "d87ae2fd-df18-4c12-a901-ffd5ccca94cb",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "4ce15e7a-8c39-48e1-8e7e-b91ce1eb1eef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3d59cbf-172d-471e-a557-299a88075334",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Helicopter_Player",
            "id": "9aa0384a-291e-4e06-ac47-91f613bd5742",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "61dece34-18a2-4fe1-a798-2f41b4c26787",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52e5a5fc-4b06-46fa-9587-68774302f16b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Car_Player",
            "id": "41e84a13-ca09-4deb-a61a-c9ec66bf832b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "60963ad1-304d-4cff-a39f-9c10f6628cc7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "772f6f4a-8762-4295-9fd4-634e564bf2d8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "AzertyKeyboard",
            "bindingGroup": "AzertyKeyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "QwertyKeyboard",
            "bindingGroup": "QwertyKeyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}